--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 </style>
 <body>
-    <audio controls autoplay>
+    <audio autoplay>
         <source src="aino.mp3">
     </audio>
     <h3><font color="red">Nhập thông tin để tìm người yêu cho bạn :3</font></h3>
